--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,16 +9,4 @@ services: # Here we define our service(s)
       ports:
         - '4200:4200' # Port mapping
       command: >
-        bash -c "npm install && ng serve --host 0.0.0.0 --port 4200"
-
-  mariadb:
-    image: mariadb
-    ports:
-      - 3306:3306
-    volumes:
-      - ~/apps/mariadb:/var/lib/mysql
-    environment:
-      - MYSQL_ROOT_PASSWORD=nimda
-      - MYSQL_PASSWORD=1234
-      - MYSQL_USER=cy09
-      - MYSQL_DATABASE=dnddb
+        bash -c "ng serve --host 0.0.0.0 --port 4200"
